--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="https://drive.google.com/file/d/177SCftx8sObdofqKa2jpomYe17Hmez6Q/view?usp=share_link" alt="Tarique Profile picture"></td>
+            <td><img src="images/WhatsApp Image 2022-12-29 at 13.27.07-modified.png" alt="Tarique Profile picture"></td>
             <td>
                 <h1>Md Tarique Hussain</h1>
                 <p><em>2nd Year B.Tech UG student<br><strong><a href="https://www.iiests.ac.in/">IIEST Shibpur</a>, IT
